tests/golden/parse_errors/imported_file_parse_error.err
Parse error at /home/junhe/compiler/tests/golden/parse_errors/imported_file_parse_error_deps/lib.cd:1:13: expected expression
  let value = ;
              ^
